# CodeScope

./: README.md  pyproject.toml
codebase_analyzer/: constants.py  main.py
codebase_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
codebase_analyzer/analyzer/: complexity.py  duplicates.py  empty_finder.py  file_stats.py  language_detector.py  line_counter.py  pretty_output.py  scanner.py
codebase_analyzer/cli/: args.py  commands.py
codebase_analyzer/reports/: dependency_graph.py  html_report.py  reports.py
