[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-analyzer"
version = "1.0.0"
description = "CLI tool to analyze codebase structure, statistics, and insights"
authors = [
    { name="Aditya Seswani" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
codescope = "codebase_analyzer.main:main"

[tool.setuptools.packages.find]
where = ["."]
